
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {scalar_t__ conn_id_length; int conn_id; } ;
typedef TYPE_1__ ssl_conn ;


 int BUFSIZE ;
 unsigned char SSL2_MT_CLIENT_FINISHED ;
 int memcpy (unsigned char*,int ,scalar_t__) ;
 int send_ssl_packet (TYPE_1__*,unsigned char*,scalar_t__) ;

void send_client_finished(ssl_conn* ssl)
{
 unsigned char buf[BUFSIZE];

 buf[0] = SSL2_MT_CLIENT_FINISHED;
 memcpy(&buf[1], ssl->conn_id, ssl->conn_id_length);

 send_ssl_packet(ssl, buf, 1+ssl->conn_id_length);
}
